--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Nubank</string>
 
     <string name="txt_username">Hi, Dalton</string>
+    <string name="txt_balance_account">Account \n\n MZN 5420,50</string>
+
 
 
 
