--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="txt_my_cards">My Cards</string>
     <string name="txt_credit_card">Credit Card</string>
     <string name="txt_current_invoice">Current Invoice</string>
+    <string name="txt_money_invoice">MZN 945,95</string>
+    <string name="txt_limit">Available limit of MZN 15000,00</string>
+    <string name="txt_split_purchase">Split Purchases</string>
+
 
 
     <string name="img_person">Person image</string>
